RESOLVED FIXED236644
transform: perspective(0) should not be considered an identity operation
https://bugs.webkit.org/show_bug.cgi?id=236644
Summary transform: perspective(0) should not be considered an identity operation
Martin Robinson
Reported 2022-02-15 06:09:38 PST
perspective(0) is always rounded to perspective(1px), so should not be considered a transform operation. This is causing several WPT tests in the CSS Transforms suite to fail.
Attachments
Patch (7.61 KB, patch)
2022-02-15 06:18 PST, Martin Robinson
no flags
Patch (10.21 KB, patch)
2022-02-15 11:04 PST, Martin Robinson
no flags
Patch (9.30 KB, patch)
2022-02-16 00:57 PST, Martin Robinson
no flags
Martin Robinson
Comment 1 2022-02-15 06:18:47 PST
Antoine Quint
Comment 2 2022-02-15 10:25:39 PST
Looks like you missed a WPT progression in imported/w3c/web-platform-tests/web-animations/animation-model/animation-types/interpolation-per-property-002.html :)
Martin Robinson
Comment 3 2022-02-15 11:04:37 PST
EWS
Comment 4 2022-02-16 00:54:45 PST
Tools/Scripts/svn-apply failed to apply attachment 452058 [details] to trunk. Please resolve the conflicts and upload a new patch.
Martin Robinson
Comment 5 2022-02-16 00:57:49 PST
EWS
Comment 6 2022-02-16 10:10:15 PST
Committed r289903 (247336@main): <https://commits.webkit.org/247336@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 452157 [details].
Radar WebKit Bug Importer
Comment 7 2022-02-16 10:11:16 PST
Note You need to log in before you can comment on or make changes to this bug.