transform: perspective(0) should not be considered an identity operation https://bugs.webkit.org/show_bug.cgi?id=236644

Reviewed by Antoine Quint.

LayoutTests/imported/w3c:

* web-platform-tests/css/css-transforms/animation/transform-interpolation-verify-reftests-expected.txt: Update expectations.
* web-platform-tests/web-animations/animation-model/animation-types/interpolation-per-property-002-expected.txt:

Source/WebCore:

No new tests. This is covered by existing WPT tests.

* platform/graphics/transforms/PerspectiveTransformOperation.h: When the value of a perspective operation
is zero, it isn't an identity operation, because it will be rounded to 1px.



Canonical link: https://commits.webkit.org/247336@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@289903 268f45cc-cd09-0410-ab3c-d52691b4dbfc